syntax = "proto3";


package grpc;

message Vehicle {
  string id = 1;
  string plat_number = 2;
  string vehicle_type = 3;
  string time_check_in = 4;
  string time_check_out = 5;
  string date_check_in = 6;
  string date_check_out = 7;
}

message Filter {
  string plat_number = 1;
  string vehicle_type = 2;
}

message VehicleInTownRequest {
  string town_code = 1;
  Filter filter = 2;
}

message VehicleList {
  repeated Vehicle list = 1;
}

service Vehicles {
  rpc GetVehicleInTown(VehicleInTownRequest) returns (VehicleList) {};
}